--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,8 @@
 = Evergreen / OpenSRF Ansible Installer
 :author: Bill Erickson, King County Library System
 :email: berickxx@gmail.com      
+:editor: Steve Wills, Maine Balsam Library Consortium
+:email: swills@beyond-print.com
 
 == A Warning About Virtualized Ejabberd
 
@@ -46,7 +48,7 @@ Clone and run the Ansible playbook using an Ubuntu login which has sudo
 sudo apt install -y software-properties-common # sometimes necessary
 sudo apt update -y
 sudo apt install -y git ansible
-git clone --branch ubuntu-22.04 https://github.com/berick/evergreen-ansible-installer.git
+git clone --branch ubuntu-22.04 https://github.com/StephenGWills/evergreen-ansible-installer.git
 cd evergreen-ansible-installer
 sudo ansible-playbook playbook.yml
 
